--- a/.config/nginx/MOYEON.conf
+++ b/.config/nginx/MOYEON.conf
@@ -10,6 +10,6 @@ server {
     }
 
     location /static/ {
-        alias /srv/MoYeonHada/static/;
+        alias /home/ubuntu/srv/MoYeonHada/static/;
     }
 }
