--- a/.config/nginx/MOYEON.conf
+++ b/.config/nginx/MOYEON.conf
@@ -12,4 +12,8 @@ server {
     location /static/ {
         alias /srv/MoYeonHada/static/;
     }
+
+    location /media/ {
+        alias /srv/MoYeonHada/media/;
+    }
 }
